; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppbconf.c_ppbus_print_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppbconf.c_ppbus_print_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppb_device = type { i64 }

@.str = private unnamed_addr constant [12 x i8] c" flags 0x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @ppbus_print_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ppbus_print_child(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.ppb_device*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @bus_print_child_header(i32 %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @device_get_ivars(i32 %10)
  %12 = inttoptr i64 %11 to %struct.ppb_device*
  store %struct.ppb_device* %12, %struct.ppb_device** %5, align 8
  %13 = load %struct.ppb_device*, %struct.ppb_device** %5, align 8
  %14 = getelementptr inbounds %struct.ppb_device, %struct.ppb_device* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %2
  %18 = load %struct.ppb_device*, %struct.ppb_device** %5, align 8
  %19 = getelementptr inbounds %struct.ppb_device, %struct.ppb_device* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i64 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i64 %20)
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %21
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %6, align 4
  br label %26

26:                                               ; preds = %17, %2
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i64 @bus_print_child_footer(i32 %27, i32 %28)
  %30 = load i32, i32* %6, align 4
  %31 = sext i32 %30 to i64
  %32 = add nsw i64 %31, %29
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %6, align 4
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @bus_print_child_header(i32, i32) #1

declare dso_local i64 @device_get_ivars(i32) #1

declare dso_local i64 @printf(i8*, i64) #1

declare dso_local i64 @bus_print_child_footer(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
